# app/Enums/AddressType.php
@@ -3,6 +3,14 @@
 namespace App\Enums;
 
 
+
+/**
+ * @OA\Schema(
+ *     schema="AddressType",
+ *     type="string",
+ *     enum={App\Enums\AddressType::class}
+ * )
+ */
 enum AddressType: int
 {
     case HOME = 1;
