# app/Http/Controllers/Api/MobileAppApiController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\MobileUser;
 use App\Services\MobileAppService;
 
 class MobileAppApiController extends Controller
@@ -35,6 +36,18 @@ class MobileAppApiController extends Controller
         return response()->json($services);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/all-banner-ads",
+     *     summary="Get all banner ads",
+     *     tags={"Mobile App"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(type="array", @OA\Items(ref="App\Swagger\Schema\BannerAd"))
+     *     )
+     * )
+     */
     public function getAllBannerAds()
     {
         $forHomePage = request()->has('for_home_page') ? true : null;
